// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prisma-relay-cursor-connection errors for invalid arguments (after with last) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (after without first) 1`] = `[Error: "after" needs to be used with "first"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (before with first) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (before without last) 1`] = `[Error: "before" needs to be used with "last"]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both after & before with first) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both after & before) 1`] = `[Error: Only one of "after" and "before" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (both first & last) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (kitchensink) 1`] = `[Error: Only one of "first" and "last" can be set]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (negative first) 1`] = `[Error: "first" has to be positive]`;

exports[`prisma-relay-cursor-connection errors for invalid arguments (negative last) 1`] = `[Error: "last" has to be positive]`;

exports[`prisma-relay-cursor-connection returns all TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzAxIn0=",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAyIn0=",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAzIn0=",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA1In0=",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA2In0=",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA3In0=",
      "node": Object {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA4In0=",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA5In0=",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEwIn0=",
      "node": Object {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzExIn0=",
      "node": Object {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEyIn0=",
      "node": Object {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEzIn0=",
      "node": Object {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE0In0=",
      "node": Object {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE1In0=",
      "node": Object {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE2In0=",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE3In0=",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE4In0=",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE5In0=",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzIwIn0=",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzIwIn0=",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6ImlkXzAxIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns all USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
        "isAdmin": false,
        "username": "user1",
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
        "isAdmin": false,
        "username": "user6",
      },
    },
    Object {
      "cursor": "eyJpZCI6N30=",
      "node": Object {
        "email": "user7@email.com",
        "id": 7,
        "isAdmin": false,
        "username": "user7",
      },
    },
    Object {
      "cursor": "eyJpZCI6OH0=",
      "node": Object {
        "email": "user8@email.com",
        "id": 8,
        "isAdmin": false,
        "username": "user8",
      },
    },
    Object {
      "cursor": "eyJpZCI6OX0=",
      "node": Object {
        "email": "user9@email.com",
        "id": 9,
        "isAdmin": false,
        "username": "user9",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTB9",
      "node": Object {
        "email": "user10@email.com",
        "id": 10,
        "isAdmin": false,
        "username": "user10",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTF9",
      "node": Object {
        "email": "user11@email.com",
        "id": 11,
        "isAdmin": false,
        "username": "user11",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTJ9",
      "node": Object {
        "email": "user12@email.com",
        "id": 12,
        "isAdmin": false,
        "username": "user12",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTN9",
      "node": Object {
        "email": "user13@email.com",
        "id": 13,
        "isAdmin": false,
        "username": "user13",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTR9",
      "node": Object {
        "email": "user14@email.com",
        "id": 14,
        "isAdmin": false,
        "username": "user14",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTV9",
      "node": Object {
        "email": "user15@email.com",
        "id": 15,
        "isAdmin": false,
        "username": "user15",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
        "isAdmin": false,
        "username": "user16",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
        "isAdmin": false,
        "username": "user17",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
        "isAdmin": false,
        "username": "user18",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
        "isAdmin": false,
        "username": "user19",
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
        "isAdmin": false,
        "username": "user20",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzAxIn0=",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAyIn0=",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAzIn0=",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA1In0=",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzA1In0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6ImlkXzAxIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 1st todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzAyIn0=",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAzIn0=",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA1In0=",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA2In0=",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzA2In0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzAyIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 5th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzA2In0=",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
        "text": "ut sunt consequuntur",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA3In0=",
      "node": Object {
        "id": "id_07",
        "isCompleted": false,
        "text": "accusamus aut labore",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA4In0=",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
        "text": "et quo quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA5In0=",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
        "text": "accusantium a excepturi",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEwIn0=",
      "node": Object {
        "id": "id_10",
        "isCompleted": true,
        "text": "deserunt rerum occaecati",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzEwIn0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzA2In0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 15th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzE2In0=",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE3In0=",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE4In0=",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE5In0=",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzIwIn0=",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzIwIn0=",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzE2In0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 16th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzE3In0=",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE4In0=",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE5In0=",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzIwIn0=",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzIwIn0=",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzE3In0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 TODOs after the 20th todo 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
        "isAdmin": false,
        "username": "user1",
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after the 1st user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
        "isAdmin": false,
        "username": "user6",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6Nn0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Mn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after the 5th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6Nn0=",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
        "isAdmin": false,
        "username": "user6",
      },
    },
    Object {
      "cursor": "eyJpZCI6N30=",
      "node": Object {
        "email": "user7@email.com",
        "id": 7,
        "isAdmin": false,
        "username": "user7",
      },
    },
    Object {
      "cursor": "eyJpZCI6OH0=",
      "node": Object {
        "email": "user8@email.com",
        "id": 8,
        "isAdmin": false,
        "username": "user8",
      },
    },
    Object {
      "cursor": "eyJpZCI6OX0=",
      "node": Object {
        "email": "user9@email.com",
        "id": 9,
        "isAdmin": false,
        "username": "user9",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTB9",
      "node": Object {
        "email": "user10@email.com",
        "id": 10,
        "isAdmin": false,
        "username": "user10",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MTB9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6Nn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after the 15th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
        "isAdmin": false,
        "username": "user16",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
        "isAdmin": false,
        "username": "user17",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
        "isAdmin": false,
        "username": "user18",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
        "isAdmin": false,
        "username": "user19",
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
        "isAdmin": false,
        "username": "user20",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after the 16th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
        "isAdmin": false,
        "username": "user17",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
        "isAdmin": false,
        "username": "user18",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
        "isAdmin": false,
        "username": "user19",
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
        "isAdmin": false,
        "username": "user20",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTd9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after the 20th user 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after user1@email.com 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXIzQGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI0QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI1QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
    Object {
      "cursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
        "isAdmin": false,
        "username": "user6",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJlbWFpbCI6InVzZXI2QGVtYWlsLmNvbSJ9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJlbWFpbCI6InVzZXIyQGVtYWlsLmNvbSJ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 USERs after username: user1, isAdmin: true 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOnRydWUsInVzZXJuYW1lIjoidXNlcjIifX0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOmZhbHNlLCJ1c2VybmFtZSI6InVzZXIyIn19",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOmZhbHNlLCJ1c2VybmFtZSI6InVzZXI0In19",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOmZhbHNlLCJ1c2VybmFtZSI6InVzZXI1In19",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
    Object {
      "cursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOmZhbHNlLCJ1c2VybmFtZSI6InVzZXI2In19",
      "node": Object {
        "email": "user6@email.com",
        "id": 6,
        "isAdmin": false,
        "username": "user6",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOmZhbHNlLCJ1c2VybmFtZSI6InVzZXI2In19",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJ1c2VybmFtZV9pc0FkbWluIjp7ImlzQWRtaW4iOnRydWUsInVzZXJuYW1lIjoidXNlcjIifX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the first 5 completed TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA1In0=",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA2In0=",
      "node": Object {
        "id": "id_06",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA4In0=",
      "node": Object {
        "id": "id_08",
        "isCompleted": true,
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA5In0=",
      "node": Object {
        "id": "id_09",
        "isCompleted": true,
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzA5In0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6ImlkXzA0In0=",
  },
  "totalCount": 11,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzE2In0=",
      "node": Object {
        "id": "id_16",
        "isCompleted": true,
        "text": "ut molestias veniam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE3In0=",
      "node": Object {
        "id": "id_17",
        "isCompleted": true,
        "text": "a placeat aperiam",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE4In0=",
      "node": Object {
        "id": "id_18",
        "isCompleted": true,
        "text": "quos rerum aut",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE5In0=",
      "node": Object {
        "id": "id_19",
        "isCompleted": false,
        "text": "ullam a voluptatem",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzIwIn0=",
      "node": Object {
        "id": "id_20",
        "isCompleted": true,
        "text": "dolorum deserunt quis",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzIwIn0=",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzE2In0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 1st todo 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 5th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzAxIn0=",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAyIn0=",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAzIn0=",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzA0In0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6ImlkXzAxIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 6th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzAxIn0=",
      "node": Object {
        "id": "id_01",
        "isCompleted": false,
        "text": "veritatis molestias qui",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAyIn0=",
      "node": Object {
        "id": "id_02",
        "isCompleted": false,
        "text": "occaecati a dolor",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzAzIn0=",
      "node": Object {
        "id": "id_03",
        "isCompleted": false,
        "text": "ut enim quia",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA0In0=",
      "node": Object {
        "id": "id_04",
        "isCompleted": true,
        "text": "ipsam ipsam corrupti",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzA1In0=",
      "node": Object {
        "id": "id_05",
        "isCompleted": true,
        "text": "voluptatem sint ipsam",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzA1In0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6ImlkXzAxIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 TODOs before the 16th todo 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6ImlkXzExIn0=",
      "node": Object {
        "id": "id_11",
        "isCompleted": false,
        "text": "unde et quasi",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEyIn0=",
      "node": Object {
        "id": "id_12",
        "isCompleted": false,
        "text": "et autem sapiente",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzEzIn0=",
      "node": Object {
        "id": "id_13",
        "isCompleted": false,
        "text": "deleniti fuga et",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE0In0=",
      "node": Object {
        "id": "id_14",
        "isCompleted": true,
        "text": "ea molestiae similique",
      },
    },
    Object {
      "cursor": "eyJpZCI6ImlkXzE1In0=",
      "node": Object {
        "id": "id_15",
        "isCompleted": false,
        "text": "doloribus ea aut",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6ImlkXzE1In0=",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6ImlkXzExIn0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 USERs 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTZ9",
      "node": Object {
        "email": "user16@email.com",
        "id": 16,
        "isAdmin": false,
        "username": "user16",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTd9",
      "node": Object {
        "email": "user17@email.com",
        "id": 17,
        "isAdmin": false,
        "username": "user17",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTh9",
      "node": Object {
        "email": "user18@email.com",
        "id": 18,
        "isAdmin": false,
        "username": "user18",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTl9",
      "node": Object {
        "email": "user19@email.com",
        "id": 19,
        "isAdmin": false,
        "username": "user19",
      },
    },
    Object {
      "cursor": "eyJpZCI6MjB9",
      "node": Object {
        "email": "user20@email.com",
        "id": 20,
        "isAdmin": false,
        "username": "user20",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MjB9",
    "hasNextPage": false,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTZ9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 USERs before the 1st user 1`] = `
Object {
  "edges": Array [],
  "pageInfo": Object {
    "endCursor": undefined,
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": undefined,
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 USERs before the 5th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
        "isAdmin": false,
        "username": "user1",
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NH0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 USERs before the 6th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MX0=",
      "node": Object {
        "email": "user1@email.com",
        "id": 1,
        "isAdmin": false,
        "username": "user1",
      },
    },
    Object {
      "cursor": "eyJpZCI6Mn0=",
      "node": Object {
        "email": "user2@email.com",
        "id": 2,
        "isAdmin": true,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6M30=",
      "node": Object {
        "email": "user3@email.com",
        "id": 3,
        "isAdmin": false,
        "username": "user2",
      },
    },
    Object {
      "cursor": "eyJpZCI6NH0=",
      "node": Object {
        "email": "user4@email.com",
        "id": 4,
        "isAdmin": false,
        "username": "user4",
      },
    },
    Object {
      "cursor": "eyJpZCI6NX0=",
      "node": Object {
        "email": "user5@email.com",
        "id": 5,
        "isAdmin": false,
        "username": "user5",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6NX0=",
    "hasNextPage": true,
    "hasPreviousPage": false,
    "startCursor": "eyJpZCI6MX0=",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the last 5 USERs before the 16th user 1`] = `
Object {
  "edges": Array [
    Object {
      "cursor": "eyJpZCI6MTF9",
      "node": Object {
        "email": "user11@email.com",
        "id": 11,
        "isAdmin": false,
        "username": "user11",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTJ9",
      "node": Object {
        "email": "user12@email.com",
        "id": 12,
        "isAdmin": false,
        "username": "user12",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTN9",
      "node": Object {
        "email": "user13@email.com",
        "id": 13,
        "isAdmin": false,
        "username": "user13",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTR9",
      "node": Object {
        "email": "user14@email.com",
        "id": 14,
        "isAdmin": false,
        "username": "user14",
      },
    },
    Object {
      "cursor": "eyJpZCI6MTV9",
      "node": Object {
        "email": "user15@email.com",
        "id": 15,
        "isAdmin": false,
        "username": "user15",
      },
    },
  ],
  "pageInfo": Object {
    "endCursor": "eyJpZCI6MTV9",
    "hasNextPage": true,
    "hasPreviousPage": true,
    "startCursor": "eyJpZCI6MTF9",
  },
  "totalCount": 20,
}
`;

exports[`prisma-relay-cursor-connection returns the paginated TODOs with the base client (sanity check) 1`] = `
Array [
  Object {
    "id": "id_06",
    "isCompleted": true,
    "text": "ut sunt consequuntur",
  },
  Object {
    "id": "id_07",
    "isCompleted": false,
    "text": "accusamus aut labore",
  },
  Object {
    "id": "id_08",
    "isCompleted": true,
    "text": "et quo quia",
  },
  Object {
    "id": "id_09",
    "isCompleted": true,
    "text": "accusantium a excepturi",
  },
  Object {
    "id": "id_10",
    "isCompleted": true,
    "text": "deserunt rerum occaecati",
  },
]
`;
